[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "philiprehberger-mqtt-client"
version = "0.1.1"
description = "Simplified MQTT pub/sub wrapper with auto-reconnect"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Philip Rehberger" }]
dependencies = ["paho-mqtt>=2.0"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/philiprehberger/py-mqtt-client#readme"
Repository = "https://github.com/philiprehberger/py-mqtt-client"
Issues = "https://github.com/philiprehberger/py-mqtt-client/issues"
Changelog = "https://github.com/philiprehberger/py-mqtt-client/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/philiprehberger_mqtt_client"]
