[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "philiprehberger-mqtt-client"
version = "0.1.0"
description = "Simplified MQTT pub/sub wrapper with auto-reconnect"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Philip Rehberger" }]
dependencies = ["paho-mqtt>=2.0"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Typing :: Typed",
]

[tool.hatch.build.targets.wheel]
packages = ["src/philiprehberger_mqtt_client"]
