[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "philiprehberger-mqtt-client"
version = "0.2.0"
description = "Simplified MQTT pub/sub wrapper with auto-reconnect"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Philip Rehberger" }]
keywords = ["mqtt", "iot", "messaging", "pubsub", "broker"]
dependencies = ["paho-mqtt>=2.0"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/philiprehberger/py-mqtt-client#readme"
Repository = "https://github.com/philiprehberger/py-mqtt-client"
Issues = "https://github.com/philiprehberger/py-mqtt-client/issues"
Changelog = "https://github.com/philiprehberger/py-mqtt-client/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/philiprehberger_mqtt_client"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
strict = true
